// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proposalVotes votes for a proposal ID 1`] = `
Object {
  "proposalVotes": Object {
    "__typename": "ProposalVotesConnection",
    "nodes": Array [
      Object {
        "__typename": "ProposalVote",
        "account": "5E54UrHjHR2rS79cX8CbmuJWERuSr4vYPCr6Dh6LmvGtGUGs",
        "blockId": 238,
        "eventIdx": 1,
        "id": "238/1",
        "weight": "10",
      },
    ],
    "totalCount": 1,
  },
}
`;

exports[`proposals get by id 1`] = `
Object {
  "proposal": Object {
    "__typename": "Proposal",
    "balance": "10000000000",
    "description": "second",
    "id": "1",
    "identityId": "0x9b8597fea4fa31fb8a1367a0230e3e52391a401aa0a5c79c712e7a9c24643ef3",
    "proposer": "5CXYpJxGyMKcJX7qjVXjJcA8w9UbsonRcLn32h6riHtMEB1b",
    "state": "Executed",
    "url": "google.com",
    "votes": Object {
      "__typename": "ProposalVotesConnection",
      "nodes": Array [
        Object {
          "__typename": "ProposalVote",
          "account": "5E54UrHjHR2rS79cX8CbmuJWERuSr4vYPCr6Dh6LmvGtGUGs",
          "vote": true,
          "weight": "10",
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`proposals without filters 1`] = `
Object {
  "proposals": Object {
    "__typename": "ProposalsConnection",
    "nodes": Array [
      Object {
        "__typename": "Proposal",
        "balance": "9000000000",
        "description": "first",
        "id": "0",
        "identityId": "0x9b8597fea4fa31fb8a1367a0230e3e52391a401aa0a5c79c712e7a9c24643ef3",
        "nay": Object {
          "__typename": "ProposalVotesConnection",
          "totalCount": 0,
        },
        "proposer": "5CXYpJxGyMKcJX7qjVXjJcA8w9UbsonRcLn32h6riHtMEB1b",
        "state": "Rejected",
        "url": "google.com",
        "yay": Object {
          "__typename": "ProposalVotesConnection",
          "totalCount": 0,
        },
      },
      Object {
        "__typename": "Proposal",
        "balance": "10000000000",
        "description": "second",
        "id": "1",
        "identityId": "0x9b8597fea4fa31fb8a1367a0230e3e52391a401aa0a5c79c712e7a9c24643ef3",
        "nay": Object {
          "__typename": "ProposalVotesConnection",
          "totalCount": 0,
        },
        "proposer": "5CXYpJxGyMKcJX7qjVXjJcA8w9UbsonRcLn32h6riHtMEB1b",
        "state": "Executed",
        "url": "google.com",
        "yay": Object {
          "__typename": "ProposalVotesConnection",
          "totalCount": 1,
        },
      },
    ],
    "totalCount": 2,
  },
}
`;
